--- a/src/html/productos.html
+++ b/src/html/productos.html
@@ -7,8 +7,8 @@
     <link rel="shortcut icon" href="src/img/favicon.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-        <link rel="stylesheet" href="../css/style.css">
-        <link rel="stylesheet" href="../css/productos.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/productos.css">
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
@@ -17,106 +17,107 @@
 </head>
 
 <body>
-<header>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-black fixed-top border-bottom">
-        <div class="container">
-          <a href="#"><img class="logo" src="/src/img/assets/favicon.png" alt="Logo"></a>
-          <img class="text-header" src="/src/img/assets/mesasdepokercc.png" alt="mesasdepokercc">
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
-            aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="/index.html">Inicio</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link" href="/index.html#cards">Productos</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/index.html#quienes-somos">Quienes Somos</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/index.html#contactenos">Contáctenos</a>
-              </li>
-            </ul>
-          </div>
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-black fixed-top border-bottom">
+            <div class="container">
+                <a href="#"><img class="logo" src="/src/img/assets/favicon.png" alt="Logo"></a>
+                <img class="text-header" src="/src/img/assets/mesasdepokercc.png" alt="mesasdepokercc">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" aria-current="page" href="/index.html">Inicio</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link" href="/index.html#cards">Productos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/index.html#quienes-somos">Quienes Somos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/index.html#contactenos">Contáctenos</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
+    <main>
+        <div class="container-fluid">
+            <div class="row">
+                    <div class="col-sm-3 col-md-2 col-lg-1 sidebar">
+                        <div class="d-flex align-items-start">
+                            <div class="nav flex-column nav-pills me-3" id="v-pills-tab" role="tablist"
+                                aria-orientation="vertical">
+                                <button class="nav-link active" id="v-pills-home-tab" data-bs-toggle="pill"
+                                    data-bs-target="#v-pills-home" type="button" role="tab" aria-controls="v-pills-home"
+                                    aria-selected="true">Mesas</button>
+                                <button class="nav-link" id="v-pills-profile-tab" data-bs-toggle="pill"
+                                    data-bs-target="#v-pills-profile" type="button" role="tab"
+                                    aria-controls="v-pills-profile" aria-selected="false">Ruletas</button>
+                                <button class="nav-link" id="v-pills-messages-tab" data-bs-toggle="pill"
+                                    data-bs-target="#v-pills-messages" type="button" role="tab"
+                                    aria-controls="v-pills-messages" aria-selected="false">Ficheros</button>
+                                <button class="nav-link" id="v-pills-settings-tab" data-bs-toggle="pill"
+                                    data-bs-target="#v-pills-settings" type="button" role="tab"
+                                    aria-controls="v-pills-settings" aria-selected="false">Accesorios</button>
+                            </div>
+                        </div>
+                    </div>
+                <div class="col-sm-9 col-md-10 col-lg-11 container fondo">
+                        <div class="tab-content row" id="v-pills-tabContent">
+                            <div class="tab-pane fade show active" id="v-pills-home" role="tabpanel"
+                                aria-labelledby="v-pills-home-tab" tabindex="0">
+                                <h2 class="text-style">Mesas de Poker</h2><br>
+                                <h5 class="text-style mb-3">Elige una mesa que te guste y contáctanos para
+                                    personalizarla según tus preferencias.</h5>
+                                <div class="row d-flex  justify-content-md-center" id="poker-container">
+
+                                </div>
+                            </div>
+                            <div class="tab-pane fade mt-5 mt-md-0" id="v-pills-profile" role="tabpanel"
+                                aria-labelledby="v-pills-profile-tab" tabindex="0">
+                                <h2 class="text-style">Ruletas</h2><br>
+                                <h5 class="text-style mb-3">Personaliza una mesa de ruleta o compra el accesorio que más
+                                    te guste.</h5>
+                                <div class="row d-flex" id="ruletas-container">
+
+                                </div>
+                            </div>
+                            <div class="tab-pane fade mt-5 mt-md-0" id="v-pills-messages" role="tabpanel"
+                                aria-labelledby="v-pills-messages-tab" tabindex="0">
+                                <h2>Ficheros</h2>
+                                <div class="row d-flex" id="ficheros-container">
+
+                                </div>
+                            </div>
+                            <div class="tab-pane fade mt-5 mt-md-0" id="v-pills-settings" role="tabpanel"
+                                aria-labelledby="v-pills-settings-tab" tabindex="0">
+                                <h2>Accesorios</h2>
+                                <div class="row d-flex  justify-content-md-center" id="accesorios-container">
+
+                                </div>
+                            </div>
+                        </div>
+                </div>
+            </div>
         </div>
-      </nav>
-</header>
-<main>
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-md-1">
-                <div class="sidebar">
-                    <div class="d-flex align-items-start">
-                        <div class="nav flex-column nav-pills me-3" id="v-pills-tab" role="tablist"
-                            aria-orientation="vertical">
-                            <button class="nav-link active" id="v-pills-home-tab" data-bs-toggle="pill"
-                                data-bs-target="#v-pills-home" type="button" role="tab" aria-controls="v-pills-home"
-                                aria-selected="true">Mesas</button>
-                            <button class="nav-link" id="v-pills-profile-tab" data-bs-toggle="pill"
-                                data-bs-target="#v-pills-profile" type="button" role="tab"
-                                aria-controls="v-pills-profile" aria-selected="false">Ruletas</button>
-                            <button class="nav-link" id="v-pills-messages-tab" data-bs-toggle="pill"
-                                data-bs-target="#v-pills-messages" type="button" role="tab"
-                                aria-controls="v-pills-messages" aria-selected="false">Ficheros</button>
-                            <button class="nav-link" id="v-pills-settings-tab" data-bs-toggle="pill"
-                                data-bs-target="#v-pills-settings" type="button" role="tab"
-                                aria-controls="v-pills-settings" aria-selected="false">Accesorios</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-6 col-md-11 mt-md-0 mt-sm-5 fondo">
-                <div class="products">
-                    <div class="tab-content" id="v-pills-tabContent">
-                        <div class="tab-pane fade show active mt-5 mt-md-0" id="v-pills-home" role="tabpanel"
-                            aria-labelledby="v-pills-home-tab" tabindex="0">
-                            <h2 class="text-style">Mesas de Poker</h2><br>
-                            <h5 class="text-style mb-3">Elige una mesa que te guste y contáctanos para personalizarla según tus preferencias.</h5>
-                            <div class="row d-flex  justify-content-md-center" id="mesas-poker-container">
+    </main>
+    <footer>
 
-                            </div>
-                        
-                        </div>
-                        <div class="tab-pane fade mt-5 mt-md-0" id="v-pills-profile" role="tabpanel"
-                            aria-labelledby="v-pills-profile-tab" tabindex="0">
-                            <h2 class="text-style">Ruletas</h2><br>
-                            <h5 class="text-style mb-3">Personaliza una mesa de ruleta o compra el accesorio que más te guste.</h5>
-                            <div class="row d-flex" id="ruletas-container">
-                            
-                            </div>
-                        </div>
-                        <div class="tab-pane fade mt-5 mt-md-0" id="v-pills-messages" role="tabpanel"
-                            aria-labelledby="v-pills-messages-tab" tabindex="0">
-                            <h2>Ficheros</h2>
-                            <div class="row d-flex" id="ficheros-container">
+    </footer>
 
-                            </div>
-                        </div>
-                        <div class="tab-pane fade mt-5 mt-md-0" id="v-pills-settings" role="tabpanel"
-                            aria-labelledby="v-pills-settings-tab" tabindex="0">
-                            <h2>Accesorios</h2>
-                            <div class="row d-flex  justify-content-md-center" id="accesorios-container">
 
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+    <div class="modal">
+        <div class="container-modal">
+            <img class="imgModal">
+            <button class="btnClose" href="">Cerrar</button>
         </div>
     </div>
-</main>
-<footer>
-
-</footer>
-
-
-<div class="modal">
-    <img id="imgModal">
-</div>
 </body>
 
 
